Replace profile image from SVG to PNG

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="container">
         <section class="hero">
             <div class="profile-section">
-                <img src="profile.svg" alt="Profile Picture" class="profile-image">
+                <img src="profile.png" alt="Profile Picture" class="profile-image">
                 <div class="profile-content">
                     <h2>Welcome to My Academic Profile</h2>
                     <p class="intro-text">
